--- a/n3fs.html
+++ b/n3fs.html
@@ -74,6 +74,7 @@
 
 <body>
     <center>
+        <h3><strong><em>#inb4ban</em></strong> - A wise, old man.</h3>
         <h4>The following people have let the server: petsmart50, tee625, jaxon000, PsichoLogique, Mlgsupergamer, Stormy, and zapster109. We have all left for seperate reasons, but similar reasons. Here is everyone’s name listed here’s statements. </h4>
         <br>Note: These were made seperately and the opinions reflect the users, not the whole group.
         <br>
@@ -96,9 +97,9 @@
             <strong>Stormy:</strong>
             <br>Hey N3FS community. I’m out. Peace. I’m leaving because the admins have their own little group of friends, and promote anyone who is their friend to as high they can be. I was promoted at the same time as Anne, and I consistently stayed a moderator without any promotions. I have gotten no good answer. Also, if you wanna make your own server and be a mod on N3FS, your SOL my friend, I was BANNED for making one. I was demoted because my computer broke, I made a thing in the staff fourms saying this, but I was still demoted, while Izzy can be away for 5 weeks (sorry izzy). I reapplied, but I'm never getting it because we have 2 new mods that I've never even met, and if they came on in the month when I was MIA, this is probably not going to end well. Goodbye to Nubble, probably the best mod that N3FS has, and Loki, a pretty cool guy. Rory was pretty cool too, and Ninja was consisntently rude but was kinda nice so bye to you too, Izzy like dissapeared but tell her i say bye. kthxbai everyones.
             <br>
-<hr>
-            <strong><em>#inb4ban</em></strong>
 
+            
+<hr>
             <br>
             <strong>Tee:</strong>
             <br>I quit, bitches. I loved you all, but I quit.
