--- a/n3fs.html
+++ b/n3fs.html
@@ -85,6 +85,7 @@
             <br>You've lost 3 moderators to this and almost half of your donators server. What you wave off as drama, is a serious problem. Look at your server.
             <br>
             <hr>
+        <p style="font-size: 12pt">
             <strong>SirPetsmart:</strong>
             <br>Why I Left N3FS....
             <br>I left the server & my position as Moderator due to a couple of reasons. First off I left due to the disconnect between Admins and Moderators. The Admins created a so called "Staff Friend Group" that only included members the Admins WANTED to be friends with. And in the process they wanted to keep there group with only "elite" members.
@@ -94,6 +95,7 @@
             <br>~Sgt. William "SirPetsmart"
             <br>
             <hr>
+        <p style="font-size: 12pt">
             <strong>Stormy:</strong>
             <br>Hey N3FS community. I’m out. Peace. I’m leaving because the admins have their own little group of friends, and promote anyone who is their friend to as high they can be. I was promoted at the same time as Anne, and I consistently stayed a moderator without any promotions. I have gotten no good answer. Also, if you wanna make your own server and be a mod on N3FS, your SOL my friend, I was BANNED for making one. I was demoted because my computer broke, I made a thing in the staff fourms saying this, but I was still demoted, while Izzy can be away for 5 weeks (sorry izzy). I reapplied, but I'm never getting it because we have 2 new mods that I've never even met, and if they came on in the month when I was MIA, this is probably not going to end well. Goodbye to Nubble, probably the best mod that N3FS has, and Loki, a pretty cool guy. Rory was pretty cool too, and Ninja was consisntently rude but was kinda nice so bye to you too, Izzy like dissapeared but tell her i say bye. kthxbai everyones.
             <br>
@@ -101,6 +103,7 @@
             
 <hr>
             <br>
+        <p style="font-size: 12pt">
             <strong>Tee:</strong>
             <br>I quit, bitches. I loved you all, but I quit.
             <br>
@@ -109,10 +112,12 @@
             <br>This is where MLG's would go, IF I HAD IT!
             <br>
         <hr>
+        <p style="font-size: 12pt">
             <strong>Psicho:</strong>
             <br>First of all, the whole staff group: they have way too much influance over the server and most of them should be fired because they are being asses to the community. If they don't like you, they will straight up ignore you and leave you to rot. In certain situation they won't hesitate to abuse their power. (i.e three months ago, when they used world edit to destroy our base). Which brings me to the Uncleleech situation, we still don't have any closure on that. His punition was minimal if even there, which suggest a severe lack of leadership. He should have been fired. There is also Kosky. He clearly didn't deserve to be moderator. The only reason why he did is because he gave members of the staff group power in the donator world.
             <br>
 <hr>
+        <p style="font-size: 12pt">
             <strong>Jace (Zapster):</strong>
             <br>I’ve been on this server for a very long time, since almost the beginning (not that anyone would be able to tell you that - I’ve been pretty much ignored up until about February). But I’ve always enjoyed this server - the people are generally nice and well-meaning, and the community is awesome. It is Dan’s, after all. But once I finally started to make friends here around February, I noticed something. There were really two friend groups. There’s the group of players who have been around since the beginning (who I’ve always known, but they’ve never known me until February or so), and there’s the staff. And that’s a problem. Because, with a few exceptions, mainly Tee and Petsmart, the staff were an exclusive group. They helped their friends rise in power. It was the definition of an Oligarchy.
             <br><br>This was unarguably clear on the new Donators world. The first set of government officials in the Donators world was almost entirely staff in the main staff oligarchy. And the same the second time, albeit with Kosky. And now the third set is the same damn people - they’ve just shuffled around. It couldn’t be clearer that the staff here are doing nothing but sucking each other’s dicks to make each other feel good. And while I’ll miss a lot of things about this server - namely my builds - I won’t miss the circlejerk staff. There’s a lot to like about the Nerdcubed servers - but the negatives outweigh the positives.
@@ -123,7 +128,8 @@
     <hr>
 </body>
 <foot>
-    <center>Bye N3FS. It's been fun.<br> Thanks for all the fish.</center>
+    <center>Bye N3FS. It's been fun.<br> Thanks for all the fish.</center><br>
+    
 </foot>
 
 </html>
