--- a/n3fs.html
+++ b/n3fs.html
@@ -79,6 +79,7 @@
         <br>Note: These were made seperately and the opinions reflect the users, not the whole group.
         <br>
         <hr>
+        <div class="container">
         <p style="font-size: 12pt">
             <strong>Jaxon:</strong>
             <br>Hi, guys. I’m the one you hated. Ok so this is why i quit. I do not like the consolidation of power within a small group of people. When a small group of people gain a large amount of power, this is the consolidation of power. A small group of staff have been able to do this. They have become friends, and can/have used their power to alienate users, and can use their power to take moderation action against other users. This bothers me, and was one of the major reasons I personally quit. I also quit because being hated isnt always fun. On one hand, you can go about destroying things, without a care in the world, on the other, people hate you. The insults and exclusion will build up, and it will take its toll. The final reason is that the staff friend group was mean to my friends. THIS GOT ME A BIT PISSED (can you tell). One of my friends specifically, donated a ridiculous amount of money to the server, and you know the staff groups response? They harrased him. I regret to say that i participated in this. And that brings me to another point. Because these users are staff, other users follow them in their actions, and therefore assume that their actions are always right, including harrasment of users. This is ridiculous. I’m done. Thanks for the social life.
@@ -124,7 +125,7 @@
             <br><br>So yes, I’m leaving. I am one of the group who have decided we can find a better home for our minecraft playing, one where the playing field is more level. One where, when they ask for moderator applications, the only people who get accepted aren’t already friends with the other mods. Thanks for all the fun times, you fornicators of dolphins.
 
     </center>
-    </p>
+    </p></div>
     <hr>
 </body>
 <foot>
