--- a/n3fs.html
+++ b/n3fs.html
@@ -75,7 +75,7 @@
 <body>
     <center>
         <h3><strong><em>#inb4ban</em></strong> - A wise, old man.</h3>
-        <h4>The following people have let the server: petsmart50, tee625, jaxon000, PsichoLogique, Mlgsupergamer, Stormy, and zapster109. We have all left for seperate reasons, but similar reasons. Here is everyone’s name listed here’s statements. </h4>
+        <h4>The following people have let the server: petsmart50, tee625, jaxon000, PsichoLogique, Mlgsupergamer, crazy_cop, Stormy, and zapster109. We have all left for seperate reasons, but similar reasons. Here is everyone’s name listed here’s statements. </h4>
         <br>Note: These were made seperately and the opinions reflect the users, not the whole group.
         <br>
         <hr>
@@ -109,8 +109,18 @@
             <br>I quit, bitches. I loved you all, but I quit.
             <br>
             <hr>
+            <p style="font-size: 12pt">
             <strong>mlgsupergamer:</strong>
-            <br>This is where MLG's would go, IF I HAD IT!
+            <br>Why i left the Nerdcubed Servers. As jace said "There’s the group of players who have been around since the beginning, and there’s the staff. And that’s a problem",
+Also i just dont like how the server is run and other people also don't, I know alot of people who have played on these servers and i still
+do but the server is just getting stupid. You must be able to tell this just look how many people have left over the past 3 months and new
+users dont even stay on...
+<br><br>
+The servers was a fun place then things happend like the "staff freind group" and how normal users are basically not there. Before all this the servers was good.
+Another thing is that staff dont follow the rules and nobody cares if they dont for example if you was to go on ts and insult them you would get kicked or banned
+but if the staff group was to do the same thing nothing would happen.
+<br><br>
+It was fun before all this happend and thats why im going, Bye
             <br>
         <hr>
         <p style="font-size: 12pt">
@@ -118,6 +128,10 @@
             <br>First of all, the whole staff group: they have way too much influance over the server and most of them should be fired because they are being asses to the community. If they don't like you, they will straight up ignore you and leave you to rot. In certain situation they won't hesitate to abuse their power. (i.e three months ago, when they used world edit to destroy our base). Which brings me to the Uncleleech situation, we still don't have any closure on that. His punition was minimal if even there, which suggest a severe lack of leadership. He should have been fired. There is also Kosky. He clearly didn't deserve to be moderator. The only reason why he did is because he gave members of the staff group power in the donator world.
             <br>
 <hr>
+            <p style="font-size: 12pt">
+                <strong>crazy_cop</strong><br>
+                im leavin because all teh staffs just do what benifits them, even in donators the people who spent money to get into that world or to keep the server uo got shat on by the mods . It just started to be their sever that other people paid for<br>
+                <hr>
         <p style="font-size: 12pt">
             <strong>Jace (Zapster):</strong>
             <br>I’ve been on this server for a very long time, since almost the beginning (not that anyone would be able to tell you that - I’ve been pretty much ignored up until about February). But I’ve always enjoyed this server - the people are generally nice and well-meaning, and the community is awesome. It is Dan’s, after all. But once I finally started to make friends here around February, I noticed something. There were really two friend groups. There’s the group of players who have been around since the beginning (who I’ve always known, but they’ve never known me until February or so), and there’s the staff. And that’s a problem. Because, with a few exceptions, mainly Tee and Petsmart, the staff were an exclusive group. They helped their friends rise in power. It was the definition of an Oligarchy.
