--- a/n3fs.html
+++ b/n3fs.html
@@ -75,8 +75,8 @@
 <body>
     <center>
         <h3><strong><em>#inb4ban</em></strong> - A wise, old man.</h3>
-        <h4>The following people have left the server: petsmart50, tee625, jaxon000, PsichoLogique, Mlgsupergamer, crazy_cop, Stormy, and zapster109. We have all left for seperate reasons, but similar reasons. Here is everyone’s name listed here’s statements. </h4>
-        <br>Note: These were made seperately and the opinions reflect the users, not the whole group.
+        <h4>The following people have left the server: petsmart50, tee625, jaxon000, PsichoLogique, Mlgsupergamer, Stormy, zapster109, crazy_cop, and jellis999(statement not shown) We have all left for seperate reasons, but similar reasons. Here is everyone’s name listed here’s statements.</h4>
+        <br><kbd>Note: These were made seperately and the opinions reflect the users, not the whole group.</kbd>
         <br>
         <hr>
         <div class="container">
