--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@ request.send();
             <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.<br>
                 <a href="cancer.html">The free online cancer checker</a><br>
                 <a href="pokecrate/index.html">I also redesigned the website for Pokecrate once.</a><br>
-                If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
+                If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.<br>
             </p>
+            <p style="font-size: 5pt">You can refresh to change the tagline but you didn't hear that from me.</p>
         </div>
 <hr>
         <!-- Example row of columns -->
