HAPPY BIRTHDAY AMERICA

--- a/Index-Old.html
+++ b/Index-Old.html
@@ -165,8 +165,8 @@
                 </script>
 
                 <div class="jumbotron ">
-                    <p style="font-size: 750%;">HAPPY BIRTHDAY AMERICA</p>
-                    <p style="font-size: 200%;">I hope you enjoy your Treason Celebration. -Stormy</p>
+                    <p style="font-size: 750%;">Stormy's Website</p>
+                    <div id="candy" style="font-size: 200%;">I can't load any Candies! Something went wrong!</div>
                     <br>
                     <br>
                     <hr>
