--- a/cancer.html
+++ b/cancer.html
@@ -1,106 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <div align="center" style="vertical-align:middle;">
-<head>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-31660701-1', 'stormyjet.com');
-  ga('send', 'pageview');
+    <head>
+        <script>
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-</script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="/img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="/img/favicon-160x160.png" sizes="160x160">
-    <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
-    <meta name="msapplication-TileColor" content="#b91d47">
-    <meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
-    <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png">
-    <meta name="msapplication-square144x144logo" content="/img/mstile-144x144.png">
-    <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
-    <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
-    <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
+            ga('create', 'UA-31660701-1', 'stormyjet.com');
+            ga('send', 'pageview');
+        </script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="shortcut icon" href="/img/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
+        <link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196">
+        <link rel="icon" type="image/png" href="/img/favicon-160x160.png" sizes="160x160">
+        <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
+        <meta name="msapplication-TileColor" content="#b91d47">
+        <meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
+        <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png">
+        <meta name="msapplication-square144x144logo" content="/img/mstile-144x144.png">
+        <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
+        <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
+        <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
 
-    <title>Cancer Check</title>
+        <title>Cancer Check</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
 
-    <link href="css/cover.css" rel="stylesheet">
+        <link href="css/cover.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
- 
-</head>
+        <!-- Just for debugging purposes. Don't actually copy this line! -->
 
-<body>
+    </head>
 
-    <div class="site-wrapper">
+    <body>
 
-        <div class="site-wrapper-inner">
+        <div class="site-wrapper">
 
-            <div class="cover-container">
+            <div class="site-wrapper-inner">
 
-                <div class="masthead clearfix">
-                    <div class="inner">
-                        <center>
+                <div class="cover-container">
 
-</center>
+                    <div class="masthead clearfix">
+                        <div class="inner">
+                            <center>
 
+                            </center>
+
+                        </div>
                     </div>
-                </div>
-        <br><br><br>
+                    <br>
+                    <br>
+                    <br>
+                    <div style="vertical-align:middle;">
+                        <!--<h1 style="font-size:45pt;align:center">Input your symptoms that you see</h1>-->
+                        <br>
+                        <br>
+                        <form action="results.html">>
+                            <center>
+                                <h1 style="float:center;font-size:45pt;"><input style="color:black" type="text" name="cancerinput" value="Input your symptoms"></input></h1>
+                            </center>
+                            <input type="submit" style="height: 0px; width: 0px; border: none; padding: 0px;" hidefocus="true" />
+                        </form>
+
+
                         <div style="vertical-align:middle;">
-                    <h1 style="font-size:45pt;align:center">Input your symptoms that you see</h1><br><br>
-                    <center><h1 style="float:left;font-size:45pt;"><input style="color:black"></input></h1></center>
-                    <input type="submit" style="height: 0px; width: 0px; border: none; padding: 0px;" hidefocus="true" />
+                            <button type="button" class="btn btn-lg">
+                                <a style="color:black;float:right;" href="results.html">Cancer Check</a>
+                            </button>
+                            </p>
+                        </div>
 
+                        <div class="mastfoot">
+                            <div class="inner">
 
-
-<div style="vertical-align:middle;">
-<button type="button" class="btn btn-lg">
- <a style="color:black;float:right;" href="results.html">Cancer Check</a>
-</button>
-                    </p>
-                </div>
-
-                <div class="mastfoot">
-                    <div class="inner">
+                            </div>
+                        </div>
 
                     </div>
+
                 </div>
 
             </div>
 
-        </div>
-
+            <!-- Bootstrap core JavaScript
+    ================================================== -->
+            <!-- Placed at the end of the document so the pages load faster -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+            <script src="../../dist/js/bootstrap.min.js"></script>
+            <script src="../../assets/js/docs.min.js"></script>
+    </body>
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/docs.min.js"></script>
-</body>
-</div>
 </html>
