--- a/finalresults.html
+++ b/finalresults.html
@@ -3,15 +3,21 @@
 
 <head>
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-31660701-1', 'stormyjet.com');
-  ga('send', 'pageview');
-
-</script>
+        ga('create', 'UA-31660701-1', 'stormyjet.com');
+        ga('send', 'pageview');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,24 +56,34 @@
     <link href="css/justified-nav.css" rel="stylesheet">
     <div class="container">
         <div>
-        <script>
-        var request = new XMLHttpRequest();
-request.onload = function() {
-    // get the file contents
-    var fileContent = this.responseText;
-    // split into lines
-    var fileContentLines = fileContent.split( '\n' );
-    // get a random index (line number)
-    var randomLineIndex = Math.floor( Math.random() * fileContentLines.length );
-    // extract the value
-    var randomLine = fileContentLines[ randomLineIndex ];
+            <script>
+                var request = new XMLHttpRequest();
+                request.onload = function() {
+                    // get the file contents
+                    var fileContent = this.responseText;
+                    // split into lines
+                    var fileContentLines = fileContent.split('\n');
+                    // get a random index (line number)
+                    var randomLineIndex = Math.floor(Math.random() * fileContentLines.length);
+                    // extract the value
+                    var randomLine = fileContentLines[randomLineIndex];
 
-    // add the random line in a div
-    document.getElementById( 'cancer' ).innerHTML = randomLine;
-};
-request.open( 'GET', 'http://stormyjet.com/clist.txt', true );
-request.send();
-</script>
+
+                    document.getElementById('cancer').innerHTML = randomLine;
+                };
+                request.open('GET', 'http://stormyjet.com/clist.txt', true);
+                request.send();
+            </script>
+            <script type="text/javascript">
+                // Original JavaScript code by Chirp Internet: www.chirp.com.au
+                 // Please acknowledge use of this code by including this header.
+
+                function getCookie(name) {
+                    var re = new RegExp(name + "=([^;]+)");
+                    var value = re.exec(document.cookie);
+                    return (value != null) ? unescape(value[1]) : null;
+                }
+            </script>
             <center>
 
                 <body>
@@ -80,19 +96,29 @@ request.send();
                             </center>
                         </div>
                     </div>
+                    <script type="text/javascript">
+                        //insert cookie
+                        document.write(getCookie("symptomin"));
+                    </script>
                     <p class="notfound">
-                        
-                        The symptoms you entered seem to be a sign of...</p><br>
-                        <div id="cancer" style="font-size: 500%;text-align: center;word-wrap: break-word;color:red">loading...</div><br>
-                        <p class="notfound">You might wanna get tested... :/</p>
 
- 
+                        The symptoms you entered seem to be a sign of...</p>
+                    <br>
+                    <div id="cancer" style="font-size: 500%;text-align: center;word-wrap: break-word;color:red">loading...</div>
+                    <br>
+                    <p class="notfound">You might wanna get tested... :/</p>
 
-  </div>
-</div>
-                    </p>
-                </body>
-            </center><foot><center>
+
+
+        </div>
+    </div>
+    </p>
+    </body>
+    </center>
+    <foot>
+        <center>
             <p class="text-muted">Hey! This is a joke, don't take it seriously! Also don't call me insensitive. If this makes a lot of complaints it will be taken down.</p>
-</center></foot>
+        </center>
+    </foot>
+
 </html>
