--- a/finalresults.html
+++ b/finalresults.html
@@ -98,17 +98,19 @@
                     </div>
                     <script type="text/javascript">
                         //insert cookie
-                        document.getElementById('symptom').innerHTML = (getCookie("symptomin"));;
+                        var cookieLine = (getCookie("symptomin"));
+                        document.getElementById('symptom').innerHTML = cookieLine
                     </script>
                     <p class="notfound">
 
                         The symptoms you entered
+                        <p class="notfound">(</p>
                         <div id="symptom">loading....</div>
-                        seem to be a sign of...</p>
-                    <br>
-                    <div id="cancer" style="font-size: 500%;text-align: center;word-wrap: break-word;color:red">loading...</div>
-                    <br>
-                    <p class="notfound">You might wanna get tested... :/</p>
+                        <p class="notfound">) seem to be a sign of...</p>
+                        <br>
+                        <div id="cancer" style="font-size: 500%;text-align: center;word-wrap: break-word;color:red">loading...</div>
+                        <br>
+                        <p class="notfound">You might wanna get tested... :/</p>
 
 
 
