whatever ill figure it out eventually

--- a/finalresults.html
+++ b/finalresults.html
@@ -104,13 +104,13 @@
                     <p class="notfound">
 
                         The symptoms you entered
-                        <p class="notfound">(</p>
+                        <!--<p class="notfound">(</p>
                         <div id="symptom">loading....</div>
-                        <p class="notfound">) seem to be a sign of...</p>
-                        <br>
-                        <div id="cancer" style="font-size: 500%;text-align: center;word-wrap: break-word;color:red">loading...</div>
-                        <br>
-                        <p class="notfound">You might wanna get tested... :/</p>
+                        <p class="notfound">)-->seem to be a sign of...</p>
+                    <br>
+                    <div id="cancer" style="font-size: 500%;text-align: center;word-wrap: break-word;color:red">loading...</div>
+                    <br>
+                    <p class="notfound">You might wanna get tested... :/</p>
 
 
 
