--- a/cancer.html
+++ b/cancer.html
@@ -80,7 +80,8 @@
                     <div class="masthead clearfix">
                         <div class="inner">
                             <center>
-                                <h3>Cancer Checker, Online, Free, and Easy</h3>
+                                <h3>StormyJet.com Online Cancer Checker</h3>
+                                <h3>Please input your Symptoms in the form below.</h3>
                             </center>
 
                         </div>
@@ -94,7 +95,7 @@
                         <br>
                         <form action="results.html">
                             <center>
-                                <h1 style="float:center;font-size:45pt;"><input style="color:black" type="text" name="sypmtomin" value="Input your symptoms"></input></h1>
+                                <h1 style="float:center;font-size:45pt;"><input style="color:black" type="text" name="sypmtomin" value=""></input></h1>
                             </center>
                             <input type="submit" style="height: 0px; width: 0px; border: none; padding: 0px;" hidefocus="true" />
                         </form>
