--- a/cancer.html
+++ b/cancer.html
@@ -80,7 +80,8 @@
                     <div class="masthead clearfix">
                         <div class="inner">
                             <center>
-                                <h2>StormyJet.com Online Cancer Checker</h2>
+                                <h2>Online Cancer Checker</h2>
+                                <h4>Fast, simple, and free</h4>
                                 <h3>Please input your Symptoms in the form below.</h3>
                             </center>
 
