--- a/open.html
+++ b/open.html
@@ -165,7 +165,7 @@
             <hr>
             <h3>Using my CSS</h3>
             All of my CSS will be at <kbd>css/{css file}</kbd>. When editing your code, ensure you have these going to the right place.
-            <span class="label label-warning"><strong>Warning</strong> |  Never link to CSS like this: sotmryjet.com/css/{cssfile}. It increases load times.</span>
+            <span class="label label-warning"><strong>Warning</strong> |  Never link to CSS like this: stormyjet.com/css/{cssfile}. It increases load times.</span>
         </p>
         <hr>
         <div class="page-header">Submissions</div>
